# versionx

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  dist-workspace.toml  lychee.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deny.yml  docs.yml  release.yml
crates/versionx-adapter-node/: Cargo.toml
crates/versionx-adapter-node/src/: lib.rs
crates/versionx-adapter-python/: Cargo.toml
crates/versionx-adapter-python/src/: lib.rs
crates/versionx-adapter-rust/: Cargo.toml
crates/versionx-adapter-rust/src/: lib.rs
crates/versionx-adapter-trait/: Cargo.toml
crates/versionx-adapter-trait/src/: lib.rs
crates/versionx-adapters/: Cargo.toml
crates/versionx-adapters/src/: lib.rs
crates/versionx-cli/: Cargo.toml
crates/versionx-cli/src/: import_cmd.rs  main.rs  release_cmd.rs  support_cmd.rs  update_cmd.rs
crates/versionx-cli/tests/: init.rs
crates/versionx-cli/wix/: main.wxs
crates/versionx-config/: Cargo.toml
crates/versionx-config/src/: detect.rs  error.rs  interpolate.rs  lib.rs  loader.rs  schema.rs  workspace.rs
crates/versionx-core/: Cargo.toml
crates/versionx-core/src/: adapter_registry.rs  error.rs  lib.rs  paths.rs  runtime_registry.rs
crates/versionx-core/src/commands/: activate.rs  bump.rs  context.rs  global.rs  init.rs  install.rs  mod.rs  runtime.rs  shim_install.rs  sync.rs  update.rs  verify.rs  which.rs  workspace.rs
crates/versionx-daemon/: Cargo.toml
crates/versionx-daemon/src/: client.rs  codec.rs  lib.rs  main.rs  paths.rs  pidfile.rs  protocol.rs  server.rs  transport.rs  watcher.rs
crates/versionx-daemon/tests/: e2e.rs
crates/versionx-daemon/wix/: main.wxs
crates/versionx-events/: Cargo.toml
crates/versionx-events/src/: lib.rs
crates/versionx-git/: Cargo.toml
crates/versionx-git/src/: history.rs  lib.rs  read.rs  write.rs
crates/versionx-github/: Cargo.toml
crates/versionx-github/src/: lib.rs
crates/versionx-lockfile/: Cargo.toml
crates/versionx-lockfile/src/: lib.rs
crates/versionx-mcp/: Cargo.toml
crates/versionx-mcp/src/: audit.rs  changelog.rs  context.rs  lib.rs  main.rs  prompts.rs  resources.rs  sanitize.rs  server.rs
crates/versionx-mcp/src/ai/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/versionx-mcp/src/tools/: bump_propose.rs  changelog_draft.rs  config_read.rs  mod.rs  policy_check.rs  release_apply.rs  release_propose.rs  state_read.rs  workspace_graph.rs  workspace_list.rs  workspace_status.rs
crates/versionx-mcp/wix/: main.wxs
crates/versionx-multirepo/: Cargo.toml
crates/versionx-multirepo/src/: fleet.rs  lib.rs  saga.rs  state.rs  translate.rs
crates/versionx-multirepo/src/links/: mod.rs  ref.rs  submodule.rs  subtree.rs  virtual.rs
crates/versionx-policy/: Cargo.toml
crates/versionx-policy/src/: context.rs  engine.rs  finding.rs  lib.rs  lockfile.rs  sandbox.rs  schema.rs  waiver.rs
crates/versionx-policy/src/rules/: advisory_block.rs  commit_format.rs  custom_luau.rs  dependency_presence.rs  dependency_version.rs  link_freshness.rs  lockfile_integrity.rs  mod.rs  provenance_required.rs  release_gate.rs  runtime_version.rs
crates/versionx-release/: Cargo.toml
crates/versionx-release/src/: apply.rs  changelog.rs  conventional.rs  git.rs  lib.rs  plan.rs  propose.rs  publish.rs  translate.rs  writeback.rs
crates/versionx-runtime-node/: Cargo.toml
crates/versionx-runtime-node/src/: lib.rs  pm.rs
crates/versionx-runtime-python/: Cargo.toml
crates/versionx-runtime-python/src/: cpython.rs  lib.rs  poetry.rs  uv.rs
crates/versionx-runtime-rust/: Cargo.toml
crates/versionx-runtime-rust/src/: lib.rs
crates/versionx-runtime-trait/: Cargo.toml
crates/versionx-runtime-trait/src/: download.rs  error.rs  lib.rs  platform.rs
crates/versionx-sdk/: Cargo.toml
crates/versionx-sdk/src/: lib.rs
crates/versionx-shim/: Cargo.toml
crates/versionx-shim/src/: main.rs
crates/versionx-shim/wix/: main.wxs
crates/versionx-state/: Cargo.toml
crates/versionx-state/src/: error.rs  lib.rs  migrations.rs  model.rs  store.rs
crates/versionx-tasks/: Cargo.toml
crates/versionx-tasks/src/: lib.rs
crates/versionx-tui/: Cargo.toml
crates/versionx-tui/src/: main.rs
crates/versionx-tui/wix/: main.wxs
crates/versionx-web/: Cargo.toml
crates/versionx-web/src/: main.rs
crates/versionx-web/wix/: main.wxs
crates/versionx-workspace/: Cargo.toml
crates/versionx-workspace/src/: discovery.rs  error.rs  graph.rs  hash.rs  lib.rs  model.rs
docs/spec/: 00-README.md  01-architecture-overview.md  02-config-and-state-model.md  03-ecosystem-adapters.md  04-runtime-toolchain-mgmt.md  05-release-orchestration.md  06-multi-repo-and-monorepo.md  07-policy-engine.md  08-github-integration.md  09-programmatic-and-ai-api.md  10-mvp-and-roadmap.md  11-version-roadmap.md
docs/superpowers/plans/: 2026-04-20-deep-ci-integration-dispatch.md  2026-04-20-deep-ci-integration.md
docs/superpowers/specs/: 2026-04-20-deep-ci-integration-design.md  2026-04-20-developer-docs-design.md
website/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: roadmap.md
website/docs/contributing/: adding-a-package-manager-adapter.md  adding-a-runtime-installer.md  architecture.md  debugging-and-tracing.md  dev-environment.md  documentation.md  release-engineering.md  rfcs-and-design-docs.md  workspace-tour.md  writing-tests.md
website/docs/get-started/: install.md  migrate-from-asdf.md  migrate-from-changesets.md  migrate-from-mise.md  migrate-from-release-please.md  quickstart.md  your-first-release.md
website/docs/guides/: daemon-and-tui.md  github-actions-recipes.md  managing-toolchains.md  (+4 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/docs/: cli.rs  config.rs  events.rs  exit_codes.rs  mcp.rs  mod.rs  rpc.rs  syn_util.rs
(+69 files in other folders)
