[workspace]
resolver = "2"
members = [
    "crates/versionx-core",
    "crates/versionx-cli",
    "crates/versionx-tui",
    "crates/versionx-daemon",
    "crates/versionx-web",
    "crates/versionx-mcp",
    "crates/versionx-shim",
    "crates/versionx-adapters",
    "crates/versionx-adapter-trait",
    "crates/versionx-adapter-node",
    "crates/versionx-adapter-python",
    "crates/versionx-adapter-rust",
    "crates/versionx-runtime-trait",
    "crates/versionx-runtime-node",
    "crates/versionx-runtime-python",
    "crates/versionx-runtime-rust",
    "crates/versionx-config",
    "crates/versionx-lockfile",
    "crates/versionx-state",
    "crates/versionx-policy",
    "crates/versionx-release",
    "crates/versionx-tasks",
    "crates/versionx-multirepo",
    "crates/versionx-git",
    "crates/versionx-github",
    "crates/versionx-events",
    "crates/versionx-sdk",
    "xtask",
]
default-members = ["crates/versionx-cli"]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.95"
authors = ["Kody <kodydennon@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/KodyDennon/versionx"
homepage = "https://versionx.dev"
documentation = "https://docs.rs/versionx"
readme = "README.md"
keywords = ["version-manager", "toolchain", "release", "monorepo", "polyglot"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[workspace.dependencies]
# Intra-workspace
versionx-core            = { path = "crates/versionx-core",            version = "0.1.0-dev" }
versionx-adapters        = { path = "crates/versionx-adapters",        version = "0.1.0-dev" }
versionx-adapter-trait   = { path = "crates/versionx-adapter-trait",   version = "0.1.0-dev" }
versionx-adapter-node    = { path = "crates/versionx-adapter-node",    version = "0.1.0-dev" }
versionx-adapter-python  = { path = "crates/versionx-adapter-python",  version = "0.1.0-dev" }
versionx-adapter-rust    = { path = "crates/versionx-adapter-rust",    version = "0.1.0-dev" }
versionx-runtime-trait   = { path = "crates/versionx-runtime-trait",   version = "0.1.0-dev" }
versionx-runtime-node    = { path = "crates/versionx-runtime-node",    version = "0.1.0-dev" }
versionx-runtime-python  = { path = "crates/versionx-runtime-python",  version = "0.1.0-dev" }
versionx-runtime-rust    = { path = "crates/versionx-runtime-rust",    version = "0.1.0-dev" }
versionx-config          = { path = "crates/versionx-config",          version = "0.1.0-dev" }
versionx-lockfile        = { path = "crates/versionx-lockfile",        version = "0.1.0-dev" }
versionx-state           = { path = "crates/versionx-state",           version = "0.1.0-dev" }
versionx-policy          = { path = "crates/versionx-policy",          version = "0.1.0-dev" }
versionx-release         = { path = "crates/versionx-release",         version = "0.1.0-dev" }
versionx-tasks           = { path = "crates/versionx-tasks",           version = "0.1.0-dev" }
versionx-multirepo       = { path = "crates/versionx-multirepo",       version = "0.1.0-dev" }
versionx-git             = { path = "crates/versionx-git",             version = "0.1.0-dev" }
versionx-github          = { path = "crates/versionx-github",          version = "0.1.0-dev" }
versionx-events          = { path = "crates/versionx-events",          version = "0.1.0-dev" }
versionx-sdk             = { path = "crates/versionx-sdk",             version = "0.1.0-dev" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.23"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto"] }

# CLI / TUI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
clap_mangen = "0.2"
ratatui = "0.29"
crossterm = "0.28"

# HTTP / web
axum = { version = "0.8", features = ["macros", "ws", "http2"] }
aide = { version = "0.14", features = ["axum", "scalar"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-br"] }
hyper = "1.5"

# Storage
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json"] }
rusqlite_migration = "2.3"
zstd = "0.13"

# Archive formats
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate", "bzip2", "time"] }

# Hashing
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Git
gix = { version = "0.69", default-features = false, features = ["basic", "max-performance-safe"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# GitHub
octocrab = { version = "0.49", features = ["stream"] }

# MCP
rmcp = { version = "1.5", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Scripting
mlua = { version = "0.10", features = ["luau", "luau-jit", "async", "send"] }

# Paths / Time
camino = { version = "1.1", features = ["serde1"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Process / env
duct = "0.13"
which = "7.0"
shell-words = "1.1"
os_str_bytes = "7.0"

# Version / SemVer
semver = "1.0"

# DAG / graph
petgraph = "0.6"

# Concurrency primitives
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"

# Utility
indexmap = { version = "2.6", features = ["serde"] }
itertools = "0.13"
regex = "1.11"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
bytes = "1.8"
num_cpus = "1.16"

# Test utilities (dev-only)
insta = { version = "1.41", features = ["yaml", "json"] }
proptest = "1.6"
tempfile = "3.14"
pretty_assertions = "1.4"
assert_cmd = "2.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic lints we opt out of:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# Subjective / noisy — re-enable per-crate if desired.
too_long_first_doc_paragraph = "allow"
items_after_statements = "allow"
trivially_copy_pass_by_ref = "allow"
zero_sized_map_values = "allow"
literal_string_with_formatting_args = "allow"
large_stack_arrays = "allow"
case_sensitive_file_extension_comparisons = "allow"
significant_drop_tightening = "allow"
# We have internal `pub(crate)` helpers inside private modules on purpose
# so that only the re-export-gated public API escapes the crate boundary.
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"

# Profile tuning
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

# Shim binary — smallest + fastest
[profile.shim]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Dev speed
[profile.dev]
opt-level = 0
debug = 1
split-debuginfo = "unpacked"

# Tests need some optimization to not crawl
[profile.test]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
