[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Internal build / release / packaging tasks. Not published."

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
camino.workspace = true
duct.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
walkdir = "2.5"
regex.workspace = true
