[package]
name = "versionx-adapter-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "npm / pnpm / yarn adapter driving the real tools via subprocess."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
camino.workspace = true
tracing.workspace = true
semver.workspace = true
blake3.workspace = true
hex.workspace = true
versionx-adapter-trait.workspace = true
versionx-events.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta = { workspace = true }
assert_cmd = { workspace = true }

