[package]
name = "versionx-adapter-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "uv / poetry / pip adapter with venv delegation."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml = { workspace = true }
camino.workspace = true
tracing.workspace = true
semver.workspace = true
versionx-adapter-trait.workspace = true
versionx-events.workspace = true

[dev-dependencies]
tempfile.workspace = true

