[package]
name = "versionx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "The `versionx` binary — clap-based CLI with --output {human,json,ndjson}."

[package.metadata.wix]
upgrade-guid = "DE14EA3A-B606-40C4-979C-059CF4D682BA"
path-guid = "7181D352-4FF3-4F8B-B581-2722ACD9FF47"
license = false
eula = false

[lints]
workspace = true

[[bin]]
name = "versionx"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
camino.workspace = true
versionx-core.workspace = true
versionx-sdk.workspace = true
versionx-daemon.workspace = true
versionx-release.workspace = true
versionx-workspace.workspace = true
versionx-policy.workspace = true
versionx-mcp.workspace = true
indexmap.workspace = true
which.workspace = true
chrono.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile.workspace = true
serde_json.workspace = true
predicates = "3.1"

