[package]
name = "versionx-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Typed event bus used across Versionx subsystems."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

