[package]
name = "versionx-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Octocrab wrapper with rate-limit handling and installation-token rotation."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
octocrab.workspace = true
reqwest = { workspace = true }
chrono.workspace = true
versionx-events.workspace = true

