[package]
name = "versionx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "MCP server over stdio + loopback HTTP, built on the official rmcp SDK."

[package.metadata.wix]
upgrade-guid = "F73A69A2-2F55-445F-B8F8-88830A521312"
path-guid = "4EDAF012-BCA0-4EEF-99F6-8ABE1BB2816A"
license = false
eula = false

[lints]
workspace = true

[lib]
name = "versionx_mcp"
path = "src/lib.rs"

[[bin]]
name = "versionx-mcp"
path = "src/bin/versionx_mcp.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
async-trait.workspace = true
camino.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
versionx-core.workspace = true
versionx-workspace.workspace = true
versionx-release.workspace = true
versionx-policy.workspace = true
versionx-lockfile.workspace = true
versionx-state.workspace = true
axum = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
