[package]
name = "versionx-multirepo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Submodule / subtree / virtual / ref link handlers + fleet config + saga release protocol."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
tracing.workspace = true
url = { workspace = true }
indexmap = { workspace = true }
semver.workspace = true
chrono.workspace = true
regex.workspace = true
versionx-git.workspace = true
git2 = { workspace = true }
versionx-events.workspace = true
versionx-config.workspace = true
versionx-release.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
