[package]
name = "versionx-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Declarative TOML + sandboxed Luau policy engine with mandatory-expiry waivers."

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml = { workspace = true }
mlua.workspace = true
camino.workspace = true
chrono.workspace = true
tracing.workspace = true
semver.workspace = true
regex.workspace = true
versionx-config.workspace = true
versionx-events.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta = { workspace = true }

