[package]
name = "versionx-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SemVer / CalVer, PR-title + Conventional Commits + Changesets, plan/apply."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml_edit.workspace = true
camino.workspace = true
chrono.workspace = true
tracing.workspace = true
semver.workspace = true
regex.workspace = true
blake3.workspace = true
hex.workspace = true
versionx-events.workspace = true
versionx-config.workspace = true
versionx-state.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta = { workspace = true }
proptest = { workspace = true }

