[package]
name = "versionx-runtime-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "rustup wrapper for pinned Rust toolchains (never sets RUSTC)."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
camino.workspace = true
tracing.workspace = true
chrono = { workspace = true }
semver.workspace = true
which.workspace = true
versionx-runtime-trait.workspace = true
versionx-events.workspace = true

[dev-dependencies]
tempfile.workspace = true

