[package]
name = "versionx-runtime-trait"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Runtime installer trait shared by every runtime crate."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
camino.workspace = true
reqwest = { workspace = true }
versionx-events.workspace = true

