[package]
name = "versionx-runtime-trait"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Runtime installer trait shared by every runtime crate."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
camino = { workspace = true, features = ["serde1"] }
reqwest = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sha2.workspace = true
hex.workspace = true
futures.workspace = true
tar.workspace = true
flate2.workspace = true
xz2.workspace = true
zip.workspace = true
zstd.workspace = true
versionx-events.workspace = true

