[package]
name = "versionx-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLite state DB (rusqlite + WAL) with git-backed history recovery."

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true }
rusqlite_migration.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
camino.workspace = true
chrono.workspace = true
tracing.workspace = true
zstd.workspace = true
blake3.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true

