[package]
name = "versionx-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Interactive ratatui dashboard (launched by `versionx tui`)."

[package.metadata.wix]
upgrade-guid = "67D7333D-6225-4CED-8942-B5095E566731"
path-guid = "2A14D4E7-1B32-4EC2-9D3D-427E0F63FA79"
license = false
eula = false

[lints]
workspace = true

[[bin]]
name = "versionx-tui"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
camino.workspace = true
versionx-core.workspace = true

