[package]
name = "versionx-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Local-only axum web UI (loopback in v1.0)."

[package.metadata.wix]
upgrade-guid = "011AB27E-939A-49EF-9E51-42AD12539E9E"
path-guid = "2BA1C2A7-33E2-424A-A096-5B21AE9697CA"
license = false
eula = false

[lints]
workspace = true

[[bin]]
name = "versionx-web"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { workspace = true }
aide = { workspace = true }
tower.workspace = true
tower-http = { workspace = true }
versionx-core.workspace = true

