[package]
name = "versionx-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Component discovery, dep graph, and content hashing — the versionx workspace core."

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml = { workspace = true }
toml_edit.workspace = true
camino = { workspace = true, features = ["serde1"] }
tracing.workspace = true
blake3.workspace = true
hex.workspace = true
petgraph.workspace = true
indexmap = { workspace = true }
semver.workspace = true
regex.workspace = true
versionx-config.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
